Intercambiar pieza vacía con el input
Intercambia la pieza con el input, y vuelve a ejecutar el algoritmo para la nueva solución, en el paso a paso, la matriz se bloquea, y no  se puede actualizar, solo con el input

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,24 @@ body {
     background: white
 }
 
+.transparentFilm {
+    display: grid;
+    text-align: center;
+    background: rgba(255, 255, 0, 0);
+}
+
+.disableTable {
+    z-index: -1;
+}
+
+.enableTable{
+    z-index: 1;
+}
+
+.table{
+    color: red;
+}
+
 .unselectedNumbers {
     margin: 0;
     position: absolute;
