--- a/css/styles.css
+++ b/css/styles.css
@@ -1,62 +1,39 @@
-html {
-    height: 100%;
-    overflow: hidden;
+/* ##################    Contenedor    ################## */
+.container_1{
+    display: flex;
 }
+/* ##################    Tablero    ################## */
 
-/* hay que cambiarlo, es que choca con todo el resto de css */
-.tituloPruebaHayQueBorrarlo{
-    font-size: 24;
-    color: white;
 
-}
 
-.title {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    right: 0;
-    color: #fff;
-    text-align: center;
-    font-family: Lato;
-    font-weight: 50;
-    font-size: 50px;
-    letter-spacing: 10px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-}
+.box_tablero{
+    flex: 2;
+    order: 1;
 
-.title span {
-    background: -webkit-linear-gradient(white, #38495a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 
-body {
-    width: 100%;
-    height: 100%;
-    /* Comenté esto para que no se viera todo extendido por la pantalla, los componentes */
-    /* display: grid; */ 
-    position: relative;
-    align-items: center;
 }
 
 .bodyA {
-    background: radial-gradient(ellipse at bottom, #1b2735, #444b70 100%);
+    background: #444b70;
 }
 
 .bodyB {
-    background: radial-gradient(ellipse at bottom, #1b2735, #39dab1 100%);
+    background:  #39dab1;
+}
+
+.titulo_tablero{
+    order: 1;
+    font-size: 24;
+    color: white;
+    text-align: center;
+
 }
 
 .blank_piece{
     background: white
-}
-
-.transparentFilm {
-    display: grid;
-    text-align: center;
-    background: rgba(255, 255, 0, 0);
 }
 
 .disableTable {
@@ -68,79 +45,65 @@ body {
 }
 
 .table{
+    order: 2;
     color: red;
+    align-self: center;
 }
-
-.unselectedNumbers {
-    margin: 0;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, 50%);
-    animation: none;
-    background-color: rgba(0, 0, 0, 0.466);
-    padding: 20px;
-    align-items: center;
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-gap: 15px;
-    border: 3px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    font-family: "Helvetica Neue", "Arial", sans-serif;
-    font-size: 120%;
-    width: fit-content;
-    opacity: 100%;
-    outline: dashed 1px black;
+/* Tabla que contiene la matriz */
+table, th{
+    border: 1px solid;
+    border-color: white;
 }
-
-.draggable {
-    padding: 2rem;
-    background-color: rgb(133, 22, 22);
-    border-radius: 2%;
-    border: 3px solid rgb(255, 255, 255);
-    color: rgb(226, 207, 207);
-    cursor: move;
-    width: 27px;
+/* Celda de la matriz */
+td{
     text-align: center;
+    background-color: antiquewhite;
+    width: 30px;
+}
+/* Input dentro de la celda */
+td input{
+    width: inherit;
 }
 
-#contenedor-tablero {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, 100%);
+/* ##################    Consola    ################## */
+.box_consola{
+   flex: 1; 
+   order: 2;
+
+}
+
+
+/* ##################    Controles    ################## */
+
+.container_2{
     display: flex;
-    background-color: rgb(83, 78, 78);
-    outline: dashed 1px black;
+    flex-wrap: wrap;
+}
+
+.box_controles{
+    flex: 1;
+    order: 3;
+    width: 100%;
     justify-content: center;
-    padding: 1%;
-    height: fit-content;
-    width: fit-content;
-    opacity: 100;
+    display: flex;
 }
 
-#tablero {
-    font-family: "Helvetica Neue", "Arial", sans-serif;
-    font-size: 120%;
-    width: fit-content;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    align-items: center;
+.boton_controles{
+    /* align-self: center; */
+    flex-basis: 10%;
+
 }
 
-.espacio {
-    border: 2px solid #818181;
-    width: 80px;
-    height: 80px;
-    font-size: 35px;
-    color: white;
-    background-color: black;
-    text-align: center;
-    align-content: center;
+.input_controles{
+
 }
+
+
+
+
+
+
+
 
 #stars {
     width: 1px;
