--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,10 @@
 }
 /* ##################    Tablero    ################## */
 
-
+.transparentFilm {
+    text-align: center;
+    background: rgba(255, 255, 0, 0);
+}
 
 .box_tablero{
     flex: 2;
