Ya no se puede ditar mientras esta en paso a paso

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,19 +36,21 @@
     background: white
 }
 
-.disableTable {
+/* .disableTable {
     z-index: -1;
 }
 
 .enableTable{
     z-index: 1;
-}
+} */
 
 .table{
     order: 2;
     color: red;
     align-self: center;
 }
+
+
 /* Tabla que contiene la matriz */
 table, th{
     border: 1px solid;
