New styles applicated
Also finished, implemented animated background, hover effect in some buttons and a reference to the readme.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,77 +1,85 @@
-/* ##################    Contenedor    ################## */
-.container_1{
-    display: flex;
+html {
+    overflow:hidden;
+    background-color: rgb(13, 13, 83);
+    visibility: 0%;
 }
+
+body {
+    display:list-item;
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+    background-image: linear-gradient(to right, #24243e, #141E30, #0f0c29);  
+}
+/* ##################    Contenedor    ################## */
 /* ##################    Tablero    ################## */
-
-
 
 .box_tablero{
     flex: 2;
     order: 1;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
-}
-
-.bodyA {
-    background: #444b70;
-}
-
-.bodyB {
-    background:  #39dab1;
 }
 
 .titulo_tablero{
-    order: 1;
-    font-size: 24;
-    color: white;
+    font-size: 4.5rem;
+    font-family: 'Rubik', sans-serif;
+    color: rgb(253, 253, 253);
     text-align: center;
+    z-index: 1;
+    text-shadow: 5px 5px 5px
+    rgba(15, 15, 15, 0.9), 10px 10px 10px
+    rgba(195, 212, 204, 0.3), 15px 15px 15px
+    rgba(255, 255, 255, 0.1);
+    mix-blend-mode:exclusion;
+}
 
+.subtitulo_tablero {
+    font-size: 30pt;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(253, 186, 61);
+    text-align: center;
 }
 
 .blank_piece{
-    background: white
+    background: rgb(44, 44, 44)
 }
-
-/* .disableTable {
-    z-index: -1;
-}
-
-.enableTable{
-    z-index: 1;
-} */
 
 .table{
     order: 2;
-    color: red;
+    color: rgb(48, 146, 163);
     align-self: center;
+    font-size: 50px;
 }
 
 
 /* Tabla que contiene la matriz */
 table, th{
-    border: 1px solid;
-    border-color: white;
+    border: 5px solid;
+    border-color: rgb(255, 255, 255);
 }
 /* Celda de la matriz */
 td{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-color: antiquewhite;
-    width: 30px;
+    height: 60px;
+    background-color: rgb(5, 69, 141);
+    width: 60px;
 }
 /* Input dentro de la celda */
 td input{
-    width: inherit;
+    font-family: inherit;
+    width: 48px;
+    height: 48px;
+    font-size: inherit;
+    text-align: inherit;
 }
 
 /* ##################    Consola    ################## */
 .box_consola{
    flex: 1; 
    order: 2;
-
 }
 
 
@@ -82,29 +90,62 @@ td input{
     flex-wrap: wrap;
 }
 
-.box_controles{
-    flex: 1;
-    order: 3;
-    width: 100%;
-    justify-content: center;
+.box_controles {
+    flex: 2;
+    order: 1;
     display: flex;
+    justify-content: center;
+    line-height: 30px;
+    height: 60px;
+    cursor:pointer;
+    background: #1387cf 0.5;
+    color:aliceblue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    overflow: hidden;
+    font-size: 20px;
+    align-self: center;
+    margin: 10px 10px 10px 10px;
 }
 
 .boton_controles{
-    /* align-self: center; */
-    flex-basis: 10%;
+    display: inline-flex;
+    line-height: 40px;
+    height: 50px;
+    width: 110px;
+    padding: 0;
+    font-weight: 300;
+    cursor: pointer;
+    background: #414141;
+    color: aliceblue;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: none;
+    outline: none;
+    overflow: hidden;
+    font-size: 15px;
+    align-self: center;
+    justify-content: center;
+    margin: 1px 3px 3px 3px;
+    border-radius: 10px;
+    transition: box-shadow 0.7s ease;
+}
 
+.boton_controles:hover {
+    box-shadow: 0px 0px 10px #08c5ff;
+    z-index: 1000;
 }
 
 .input_controles{
-
+    font-size: 20px;
+    width: 100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 3px;
+    height: 44px;
 }
-
-
-
-
-
-
 
 
 #stars {
