--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,7 @@ body {
     margin-left: 10px;
     padding-left: 0%;
     display:list-item;
-    height: auto;
-    width: 100%;
+    width: fit-content;
     height: fit-content;
     background-image: linear-gradient(to right, #24243e, #141E30, #0f0c29);
     overflow: hidden;  
