--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-    margin-left: 10px;
-    padding-left: 0%;
+    margin-left:0px;
+    margin-bottom: 0px;
     display:list-item;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(to right, #24243e, #141E30, #0f0c29);
     overflow: hidden;  
 }
