--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,12 @@ html {
 }
 
 a {
-    position:sticky;
+    left: 100px;
+    position: relative;
 }
 
 body {
-    margin-left: -5px;
+    margin-left: -50px;
     margin-bottom: -5px;
     display:list-item;
     width: 105%;
